[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
redis = { version = "0.23", features = ["tokio-comp"] }
anyhow = "1.0"
axum = { version = "0.6", features = ["json"] }
tower = "0.4"
rand = "0.8.5"
serde = "1.0"
serde_derive = "1.0"